[add] security + dashboard + adminProduct